[gd_scene load_steps=16 format=3 uid="uid://bd402lrwxwgvg"]

[ext_resource type="PackedScene" path="res://Enemies/DeathDelay.tscn" id="1_4oqvl"]
[ext_resource type="Script" path="res://Enemies/QuadChaingunTurret.gd" id="1_td80g"]
[ext_resource type="PackedScene" uid="uid://bpktjxlghct6o" path="res://Projectile/ProjectileManager.tscn" id="2_2dyvq"]
[ext_resource type="PackedScene" uid="uid://0wu02j7iqkpw" path="res://Enemies/AggroCast.tscn" id="2_yau36"]
[ext_resource type="Shader" path="res://HitFlash.gdshader" id="3_xdhbu"]
[ext_resource type="PackedScene" path="res://Utility/Shootable.tscn" id="4_a77yq"]
[ext_resource type="Texture2D" uid="uid://bavt1mgbgwe3e" path="res://Assets/quadchain_turret_base.png" id="4_lel7y"]
[ext_resource type="Texture2D" uid="uid://cmsvcymkl1kg7" path="res://Assets/quadchain_gun.png" id="5_03o35"]
[ext_resource type="PackedScene" path="res://Utility/Meleeable.tscn" id="5_tosjs"]
[ext_resource type="PackedScene" path="res://Utility/HitFlashHandler.tscn" id="6_j6a3e"]
[ext_resource type="Resource" uid="uid://kuqhcmh1rxoy" path="res://Projectile/Guns/QuadChaingun.tres" id="8_fnjus"]
[ext_resource type="PackedScene" uid="uid://dtn83xn0u1hpe" path="res://GUI/UncalibrationUI.tscn" id="13_o1w4h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sp1nu"]
size = Vector2(256, 256)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_311gc"]
resource_local_to_scene = true
shader = ExtResource("3_xdhbu")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oytwh"]
resource_local_to_scene = true
shader = ExtResource("3_xdhbu")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[node name="QuadChaingunTurret" type="StaticBody2D"]
script = ExtResource("1_td80g")
MachineTitle = "X4-VIPER"

[node name="AggroCast" parent="." instance=ExtResource("2_yau36")]
CastMagnitude = 4000.0
TickCap = 120
IntervalRange = Vector2(4, 16)

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_sp1nu")

[node name="Destruction" parent="." instance=ExtResource("1_4oqvl")]
Delay = 5.0

[node name="Firerate" type="Timer" parent="."]

[node name="BurstDelay" type="Timer" parent="."]

[node name="FullBody" type="Node2D" parent="."]

[node name="Base" type="Sprite2D" parent="FullBody"]
material = SubResource("ShaderMaterial_311gc")
texture = ExtResource("4_lel7y")

[node name="Barrels" type="Sprite2D" parent="FullBody"]
material = SubResource("ShaderMaterial_oytwh")
texture = ExtResource("5_03o35")

[node name="Muzzle" type="Marker2D" parent="FullBody/Barrels"]
position = Vector2(64, 0)

[node name="QuadChaingun" parent="." instance=ExtResource("2_2dyvq")]
GunInfo = ExtResource("8_fnjus")

[node name="Shootable" parent="." node_paths=PackedStringArray("Collider") instance=ExtResource("4_a77yq")]
CollisionType = 2
Collider = NodePath("..")

[node name="Meleeable" parent="." node_paths=PackedStringArray("Collider") instance=ExtResource("5_tosjs")]
Collider = NodePath("..")

[node name="HitFlashHandler" parent="." instance=ExtResource("6_j6a3e")]
Duration = 0.25

[node name="UncalibrationUI" parent="." node_paths=PackedStringArray("Body") instance=ExtResource("13_o1w4h")]
BoxSize = 512
Body = NodePath("..")
